--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 <head>
     <title></title>
 </head>
 <body>
-    
+<!--  This page will include two forms; the first being contact the company, the second being subscription to our news letter  -->
 </body>
 </html>
