--- a/store_location.html
+++ b/store_location.html
@@ -1,9 +1,16 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Store Location</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="map_style.css">
 </head>
 <body>
-<!--  4 store locations in the leader & watt style of layout  -->
+    <!--  Google map api  -->
+    <div id="map"></div>
+    <script src="map_script.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCDStXry42W016naD6IahvOqsmn2fWgLc&callback=initMap"
+    async defer></script>
 </body>
 </html>
