Local storage implmeneted

--- a/src/store_location.html
+++ b/src/store_location.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Store Location</title>
+    <title>Sahara Clothing</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="map_style.css">
+    <link rel="stylesheet" type="text/css" href="style_sheets/map_style.css">
 </head>
 <body>
     <!--  Google map api  -->
     <div id="map"></div>
-    <script src="map_script.js"></script>
+    <script src="js/map_script.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCDStXry42W016naD6IahvOqsmn2fWgLc&callback=initMap"
     async defer></script>
 </body>
