--- a/home.html
+++ b/home.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Sahara Clothing</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
 </head>
 <body>
     
