Navbar construct w/ styling. Responsive layout needed

--- a/src/collection_data.html
+++ b/src/collection_data.html
@@ -4,9 +4,26 @@
     <title>Sahara Clothing</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style_sheets/html_format_style.css">
+    <link rel="stylesheet" type="text/css" href="style_sheets/nav_bar_style.css"> 
     <script src="js/contact_page_form_script.js"></script>
 </head>
 <body>
+    <div class="navBox">
+        <div class="navImg">
+            <a href="home.html">Sahara Clothing</a>
+        </div>
+        <div class="navPageLinks">
+            <a class="active" href="collection_data.html">Collection Data</a> 
+            <a href="contact.html">Contact</a>
+            <a href="store_location.html">Location</a>
+            <a href="about_us.html">About</a>
+            <a href="childrens.html">Kids</a>
+            <a href="womens.html">Womens</a>
+            <a href="mens.html">Mens</a>
+            <a href="#home">Home</a>
+        </div>        
+    </div>
     
     <p id="display"></p>
     <button type="button" onclick="">Display Submissions</button>
