--- a/src/contact.html
+++ b/src/contact.html
@@ -4,9 +4,27 @@
     <title>Sahara Clothing</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style_sheets/html_format_style.css">
+    <link rel="stylesheet" type="text/css" href="style_sheets/nav_bar_style.css"> 
     <script src="js/contact_page_form_script.js"></script>
 </head>
 <body>
+    <div class="navBox">
+        <div class="navImg">
+            <a href="home.html">Sahara Clothing</a>
+        </div>
+        <div class="navPageLinks">
+            <a href="collection_data.html">Collection Data</a> 
+            <a class="active" href="contact.html">Contact</a>
+            <a href="store_location.html">Location</a>
+            <a href="about_us.html">About</a>
+            <a href="childrens.html">Kids</a>
+            <a href="womens.html">Womens</a>
+            <a href="mens.html">Mens</a>
+            <a href="#home">Home</a>
+        </div>        
+    </div>
+    
 <!--  This page will include two forms; the first being contact the company, the second being subscription to our news letter  -->
     <form>
         <input id="subscription" name="subscription" type="text" placeholder="Email">
