--- a/src/childrens.html
+++ b/src/childrens.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Sahara Clothing</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style_sheets/html_format_style.css">
+    <link rel="stylesheet" type="text/css" href="style_sheets/nav_bar_style.css">    
 </head>
 <body>
-    
+    <div class="navBox">
+        <div class="navImg">
+            <a href="home.html">Sahara Clothing</a>
+        </div>
+        <div class="navPageLinks">
+            <a href="collection_data.html">Collection Data</a> 
+            <a href="contact.html">Contact</a>
+            <a href="store_location.html">Location</a>
+            <a href="about_us.html">About</a>
+            <a class="active" href="childrens.html">Kids</a>
+            <a href="womens.html">Womens</a>
+            <a href="mens.html">Mens</a>
+            <a href="#home">Home</a>
+        </div>        
+    </div>
 </body>
 </html>
