Navigation bar complete

--- a/src/mens.html
+++ b/src/mens.html
@@ -13,14 +13,12 @@
             <a href="home.html">Sahara Clothing</a>
         </div>
         <div class="navPageLinks">
-            <a href="collection_data.html">Collection Data</a> 
             <a href="contact.html">Contact</a>
-            <a href="store_location.html">Location</a>
             <a href="about_us.html">About</a>
             <a href="childrens.html">Kids</a>
             <a href="womens.html">Womens</a>
             <a class="active" href="mens.html">Mens</a>
-            <a href="#home">Home</a>
+            <a href="home.html">Home</a>
         </div>        
     </div>
 </body>
