--- a/src/collection_data.html
+++ b/src/collection_data.html
@@ -9,21 +9,19 @@
     <script src="js/contact_page_form_script.js"></script>
 </head>
 <body>
-    <div class="navBox">
+    <nav class="navBox">
         <div class="navImg">
             <a href="home.html">Sahara Clothing</a>
         </div>
         <div class="navPageLinks">
-            <a class="active" href="collection_data.html">Collection Data</a> 
-            <a href="contact.html">Contact</a>
-            <a href="store_location.html">Location</a>
+            <a class="active" href="contact.html">Contact</a>
             <a href="about_us.html">About</a>
             <a href="childrens.html">Kids</a>
             <a href="womens.html">Womens</a>
             <a href="mens.html">Mens</a>
-            <a href="#home">Home</a>
-        </div>        
-    </div>
+            <a href="home.html">Home</a>
+        </div>
+    </nav>
     
     <p id="display"></p>
     <button type="button" onclick="">Display Submissions</button>
