--- a/src/home.html
+++ b/src/home.html
@@ -8,25 +8,18 @@
     <link rel="stylesheet" type="text/css" href="style_sheets/nav_bar_style.css">    
 </head>
 <body>
-    <div class="navBox">
+    <nav class="navBox">
         <div class="navImg">
             <a href="home.html">Sahara Clothing</a>
         </div>
         <div class="navPageLinks">
-            <div class="dropdown">
-                <a href="#">More</a>
-                <div class="dropdown-content">
-                    <a href="collection_data.html">Collection Data</a> 
-                    <a href="contact.html">Contact</a>
-                    <a href="store_location.html">Location</a>
-                </div>
-            </div>            
+            <a href="contact.html">Contact</a>
             <a href="about_us.html">About</a>
             <a href="childrens.html">Kids</a>
             <a href="womens.html">Womens</a>
             <a href="mens.html">Mens</a>
-            <a class="active" href="#home">Home</a>
-        </div>        
-    </div>
+            <a class="active" href="home.html">Home</a>
+        </div>
+    </nav>
 </body>
 </html>
