--- a/src/home.html
+++ b/src/home.html
@@ -4,8 +4,7 @@
     <title>Sahara Clothing</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style_sheets/html_format_style.css">
-    <link rel="stylesheet" type="text/css" href="style_sheets/nav_bar_style.css">    
+    <link rel="stylesheet" type="text/css" href="style_sheets/html_format_style.css"> 
 </head>
 <body>
     <nav class="navBox">
@@ -14,12 +13,18 @@
         </div>
         <div class="navPageLinks">
             <a href="contact.html">Contact</a>
-            <a href="about_us.html">About</a>
             <a href="childrens.html">Kids</a>
             <a href="womens.html">Womens</a>
             <a href="mens.html">Mens</a>
             <a class="active" href="home.html">Home</a>
         </div>
     </nav>
+    
+    
+    <div class="footer">
+        <a href="about_us.html">About</a>        
+        <a href="store_location.html">Location</a>
+        <a href="collection_data.html">Collection Data</a>        
+    </div>
 </body>
 </html>
