Content page centered, footer fixed

--- a/src/about_us.html
+++ b/src/about_us.html
@@ -13,7 +13,6 @@
         </div>
         <div class="navPageLinks">
             <a href="contact.html">Contact</a>
-            <a class="active" href="about_us.html">About</a>
             <a href="childrens.html">Kids</a>
             <a href="womens.html">Womens</a>
             <a href="mens.html">Mens</a>
@@ -21,5 +20,11 @@
         </div>
     </nav>
     
+    
+    <div class="footer">
+        <a href="about_us.html">About</a>        
+        <a href="store_location.html">Location</a>
+        <a href="collection_data.html">Collection Data</a>        
+    </div>
 </body>
 </html>
