--- a/src/collection_data.html
+++ b/src/collection_data.html
@@ -13,8 +13,7 @@
             <a href="home.html">Sahara Clothing</a>
         </div>
         <div class="navPageLinks">
-            <a class="active" href="contact.html">Contact</a>
-            <a href="about_us.html">About</a>
+            <a href="contact.html">Contact</a>
             <a href="childrens.html">Kids</a>
             <a href="womens.html">Womens</a>
             <a href="mens.html">Mens</a>
@@ -25,5 +24,11 @@
     <p id="display"></p>
     <button type="button" onclick="">Display Submissions</button>
     <button type="button" onclick="clearAllLocalStorage()">Clear All</button>
+    
+    <div class="footer">
+        <a href="about_us.html">About</a>        
+        <a href="store_location.html">Location</a>
+        <a href="collection_data.html">Collection Data</a>        
+    </div>
 </body>
 </html>
