--- a/src/store_location.html
+++ b/src/store_location.html
@@ -13,8 +13,7 @@
             <a href="home.html">Sahara Clothing</a>
         </div>
         <div class="navPageLinks">
-            <a class="active" href="contact.html">Contact</a>
-            <a href="about_us.html">About</a>
+            <a href="contact.html">Contact</a>
             <a href="childrens.html">Kids</a>
             <a href="womens.html">Womens</a>
             <a href="mens.html">Mens</a>
@@ -29,5 +28,12 @@
     <script src="js/map_script.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCDStXry42W016naD6IahvOqsmn2fWgLc&callback=initMap"
     async defer></script>
+    
+    
+    <div class="footer">
+        <a href="about_us.html">About</a>        
+        <a href="store_location.html">Location</a>
+        <a href="collection_data.html">Collection Data</a>        
+    </div>
 </body>
 </html>
