--- a/src/womens.html
+++ b/src/womens.html
@@ -13,12 +13,17 @@
         </div>
         <div class="navPageLinks">
             <a href="contact.html">Contact</a>
-            <a href="about_us.html">About</a>
             <a href="childrens.html">Kids</a>
             <a class="active" href="womens.html">Womens</a>
             <a href="mens.html">Mens</a>
             <a href="home.html">Home</a>
         </div>
     </nav>
+    
+    <div class="footer">
+        <a href="about_us.html">About</a>        
+        <a href="store_location.html">Location</a>
+        <a href="collection_data.html">Collection Data</a>        
+    </div>
 </body>
 </html>
