--- a/src/home.html
+++ b/src/home.html
@@ -9,22 +9,25 @@
 <body>
     <nav class="navBox">
         <div class="navImg">
-            <a href="home.html">Sahara Clothing</a>
+            <a title="Name" href="home.html">Sahara Clothing</a>
         </div>
         <div class="navPageLinks">
-            <a href="contact.html">Contact</a>
-            <a href="childrens.html">Kids</a>
-            <a href="womens.html">Womens</a>
-            <a href="mens.html">Mens</a>
-            <a class="active" href="home.html">Home</a>
+            <a title="Contacts" href="contact.html">Contact</a>
+            <a title="Childrens" href="childrens.html">Kids</a>
+            <a title="Womens" href="womens.html">Womens</a>
+            <a title="Mens" href="mens.html">Mens</a>
+            <a title="Home"  class="active" href="home.html">Home</a>
         </div>
     </nav>
     
     
     <div class="footer">
-        <a href="about_us.html">About</a>        
-        <a href="store_location.html">Location</a>
-        <a href="collection_data.html">Collection Data</a>        
+        <a title="About Us" href="about_us.html">About</a>
+        <span>|</span>  
+        <a title="Location" href="store_location.html">Location</a>
+        <span>|</span> 
+        <a title="Collection Data" href="collection_data.html">Collection Data</a>
+        <p>Powered by Sahar Software</p>
     </div>
 </body>
 </html>
