About page completed

--- a/src/contact.html
+++ b/src/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Sahara Clothing</title>
     <meta name="viewport" content="initial-scale=1.0">
@@ -78,7 +78,7 @@
         <a title="Location" href="store_location.html">Location</a>
         <span>|</span> 
         <a title="Collection Data" href="collection_data.html">Collection Data</a>
-        <p>Powered by Sahar Software</p>
+        <p>Powered by Sahara Software</p>
     </div>
 
     
