--- a/src/womens.html
+++ b/src/womens.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Sahara Clothing</title>
     <meta name="viewport" content="initial-scale=1.0">
@@ -13,7 +13,6 @@
         </div>
         <div class="navPageLinks">
             <a href="contact.html">Contact</a>
-            <a href="childrens.html">Kids</a>
             <a class="active" href="womens.html">Womens</a>
             <a href="mens.html">Mens</a>
             <a href="home.html">Home</a>
@@ -21,9 +20,12 @@
     </nav>
     
     <div class="footer">
-        <a href="about_us.html">About</a>        
-        <a href="store_location.html">Location</a>
-        <a href="collection_data.html">Collection Data</a>        
+        <a title="About Us" href="about_us.html">About</a>
+        <span>|</span>  
+        <a title="Location" href="store_location.html">Location</a>
+        <span>|</span> 
+        <a title="Collection Data" href="collection_data.html">Collection Data</a>
+        <p>Powered by Sahara Software</p>
     </div>
 </body>
 </html>
