--- a/src/collection_data.html
+++ b/src/collection_data.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Sahara Clothing</title>
     <meta name="viewport" content="initial-scale=1.0">
@@ -14,7 +14,6 @@
         </div>
         <div class="navPageLinks">
             <a href="contact.html">Contact</a>
-            <a href="childrens.html">Kids</a>
             <a href="womens.html">Womens</a>
             <a href="mens.html">Mens</a>
             <a href="home.html">Home</a>
@@ -22,13 +21,16 @@
     </nav>
     
     <p id="display"></p>
-    <button type="button" onclick="">Display Submissions</button>
+    <button type="button" onclick="displayAllLocalStorage()">Display Submissions</button>
     <button type="button" onclick="clearAllLocalStorage()">Clear All</button>
     
     <div class="footer">
-        <a href="about_us.html">About</a>        
-        <a href="store_location.html">Location</a>
-        <a href="collection_data.html">Collection Data</a>        
+        <a title="About Us" href="about_us.html">About</a>
+        <span>|</span>  
+        <a title="Location" href="store_location.html">Location</a>
+        <span>|</span> 
+        <a title="Collection Data" href="collection_data.html">Collection Data</a>
+        <p>Powered by Sahara Software</p>
     </div>
 </body>
 </html>
