HTML validated, mens.html started

--- a/src/store_location.html
+++ b/src/store_location.html
@@ -28,7 +28,7 @@
         <h1>Find Us At</h1>
         <p>The Plaza, St Aubyn Street East & Karamu Road, Hastings</p>
         <p><strong>Store Hours:</strong></p>
-        <pre><p>Mon | 9am - 5pm<br>Tue | 9am - 5pm<br>Wed | 9am - 5pm<br>Thu | 9am - 5pm<br>Fri | 9am - 5pm</p></pre>    
+        <pre>Mon | 9am - 5pm<br>Tue | 9am - 5pm<br>Wed | 9am - 5pm<br>Thu | 9am - 5pm<br>Fri | 9am - 5pm</pre>    
     </div>
     
     
