men.html & women.html completed

--- a/src/mens.html
+++ b/src/mens.html
@@ -24,16 +24,52 @@
     
     
     <div class="tableContainer">
+        <h1 id="mensHeader">Mens Clothing</h1>
         <table>
             <tr>
-                <td><img src="images/"></td>
-                <td><img src="images/"></td>
-                <td><img src="images/"></td>
+                <td>
+                    <a href="clothing_links/mens/box_crew.html">
+                        <img src="images/mens_page_images/box_crew_white.jpg" alt="Box Crew">
+                        <h1>Box Crew</h1>
+                        <p>$70</p>
+                    </a>
+                </td>
+                <td>
+                    <a href="clothing_links/mens/premum_hood.html">
+                        <img src="images/mens_page_images/premium_hood_army.jpg" alt="Premium Hood">
+                        <h1>Premium Hood</h1>
+                        <p>$70</p>
+                    </a>
+                </td>
+                <td>
+                    <a href="clothing_links/mens/union_jacket.html">
+                        <img src="images/mens_page_images/union_jacket_khaki.jpg" alt="Union Jacket">
+                        <h1>Union Jacket</h1>
+                        <p>$90</p>
+                    </a>
+                </td>
             </tr>
             <tr>
-                <td><img src="images/"></td>
-                <td><img src="images/"></td>
-                <td><img src="images/"></td>
+                <td>
+                    <a href="clothing_links/mens/oxford_shirt.html">
+                        <img src="images/mens_page_images/oxford_shirt_light_blue.jpg" alt="Ocford Shirt">
+                        <h1>Oxford Shirt</h1>
+                        <p>$60</p>
+                    </a>
+                </td>
+                <td><a href="clothing_links/mens/regby_jersey.html">
+                        <img src="images/mens_page_images/rugby_jersey_navy.jpg" alt="Rugby Jersey">
+                        <h1>Rugby Jersey</h1>
+                        <p>$60</p>
+                    </a>
+                </td>
+                <td>
+                    <a href="clothing_links/mens/crest_pant.html">
+                        <img src="images/mens_page_images/standard_pant_khaki.jpg" alt="Crest Pant">
+                        <h1>Crest Pant</h1>
+                        <p>$70</p>
+                    </a>
+                </td>
             </tr>
         </table>
     </div>
