Titles added to nav links, favicon image added to <title>

--- a/src/contact.html
+++ b/src/contact.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="style_sheets/html_format_style.css">
     <link rel="stylesheet" type="text/css" href="style_sheets/contact_page_content_style.css">
     
+<!--Image in title    -->
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/png">
         
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/contact_page_form_script.js"></script>
@@ -17,7 +19,7 @@
 <!--  Nav bar  -->
     <nav class="navBox">
         <div class="navImg">
-            <a title="Name" href="home.html">Sahara Clothing</a>
+            <a title="Name" href="home.html"><img src="images/logo.JPG"></a>
         </div>
         <div class="navPageLinks">
             <a title="Contacts" class="active" href="contact.html">Contact</a>
