Video added to about.html, contact.html input types corrected

--- a/src/contact.html
+++ b/src/contact.html
@@ -36,8 +36,7 @@
             <img src="images/page_break_grey.jpg" alt="Page break image">
         </div>
         
-        <div id="contactInfo">
-            
+        <div id="contactInfo">            
             <h1>CONTACT US</h1>
             <p>The Plaza, St Aubyn Street East & Karamu Road, Hastings</p>
             <p>027 466 58394</p>
@@ -52,8 +51,8 @@
             <div class="contactContainer">
                 <form>
                     <input id="fullName" name="fullName" type="text" placeholder="Full Name">
-                    <input id="email" name="email" type="text" placeholder="Email">
-                    <input id="contactNumber" name="contactNumber" type="text" placeholder="Contact Number">
+                    <input id="email" name="email" type="email" placeholder="Email">
+                    <input id="contactNumber" name="contactNumber" type="number" placeholder="Contact Number">
                     <input id="enquiry" name="enquiry" type="text" placeholder="Enquiry">
                     <button id="saveFormBtn" type="button">Submit</button>
                 </form>
@@ -65,7 +64,7 @@
             <h1>NEWSLETTER SUBSCRIPTION</h1>
             <div class="contactContainer">
                 <form>
-                    <input id="subscription" name="subscription" type="text" placeholder="Email">
+                    <input id="subscription" name="subscription" type="email" placeholder="Email">
                     <button id="subFormBtn" type="button">Subscribe</button>
                 </form>
             </div>
