Mailto added to contact, refatoring

--- a/src/about_us.html
+++ b/src/about_us.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navBox">
         <div class="navImg">
-            <a title="Name" href="home.html"><img src="images/logo.JPG"></a>
+            <a title="Name" href="home.html"><img src="images/logo.JPG" alt="logo"></a>
         </div>
         <div class="navPageLinks">
             <a title="Contacts" href="contact.html">Contact</a>
