--- a/src/clothing_links/womens/madison_pant.html
+++ b/src/clothing_links/womens/madison_pant.html
@@ -14,7 +14,7 @@
 <body>
     <div class="navBox">
         <div class="navImg">
-            <a title="name" href="../../home.html"><img src="../../images/logo.JPG"></a>
+            <a title="name" href="../../home.html"><img src="../../images/logo.JPG" alt="logo"></a>
         </div>
         <div class="navPageLinks">
             <a title="contact" href="../../contact.html">Contact</a>
