--- a/src/contact.html
+++ b/src/contact.html
@@ -19,7 +19,7 @@
 <!--  Nav bar  -->
     <nav class="navBox">
         <div class="navImg">
-            <a title="Name" href="home.html"><img src="images/logo.JPG"></a>
+            <a title="Name" href="home.html"><img src="images/logo.JPG" alt="logo"></a>
         </div>
         <div class="navPageLinks">
             <a title="Contacts" class="active" href="contact.html">Contact</a>
@@ -40,7 +40,7 @@
             <h1>CONTACT US</h1>
             <p>The Plaza, St Aubyn Street East & Karamu Road, Hastings</p>
             <p>027 466 58394</p>
-            <p>info@Sahara.co.nz</p>
+            <p id="emailLink"></p>
             <p><strong>Store Hours:</strong></p>
             <pre>Mon | 9am - 5pm<br>Tue | 9am - 5pm<br>Wed | 9am - 5pm<br>Thu | 9am - 5pm<br>Fri | 9am - 5pm</pre>   
         </div>
