--- a/src/collection_data.html
+++ b/src/collection_data.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navBox">
         <div class="navImg">
-            <a title="name" href="home.html"><img src="images/logo.JPG"></a>
+            <a title="name" href="home.html"><img src="images/logo.JPG" alt="logo"></a>
         </div>
         <div class="navPageLinks">
             <a title="contact" href="contact.html">Contact</a>
