--- a/src/home.html
+++ b/src/home.html
@@ -16,7 +16,7 @@
 <!--Navigation box-->
     <nav class="navBox">
         <div class="navImg">
-            <a title="Name" href="home.html"><img src="images/logo.JPG"></a>
+            <a title="Name" href="home.html"><img src="images/logo.JPG" alt="logo"></a>
         </div>
         <div class="navPageLinks">
             <a title="Contacts" href="contact.html">Contact</a>
